--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+.app_itemsContainer{
+  scroll-snap-type: y mandatory;
+  overflow: auto;
+  height: 100vh;
+}
